// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic image 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

<img
  alt="Bean"
  class="c0 c1"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
/>
`;

exports[`renders correctly for a fitted image (contain) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

.c0 {
  object-fit: contain;
}

<img
  alt="Bean"
  class="c0 c1"
  height="300"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
  style="height: 300px; width: 300px;"
  width="300"
/>
`;

exports[`renders correctly for a fitted image (cover) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

.c0 {
  object-fit: cover;
}

<img
  alt="Bean"
  class="c0 c1"
  height="300"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
  style="height: 300px; width: 300px;"
  width="300"
/>
`;

exports[`renders correctly for a fitted image with a position 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

.c0 {
  object-fit: contain;
  object-position: top;
}

<img
  alt="Bean"
  class="c0 c1"
  height="300"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
  style="height: 300px; width: 300px;"
  width="300"
/>
`;

exports[`renders correctly for a fitted image with a position 2`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

.c0 {
  object-fit: contain;
  object-position: 10px 5px;
}

<img
  alt="Bean"
  class="c0 c1"
  height="300"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
  style="height: 300px; width: 300px;"
  width="300"
/>
`;

exports[`renders correctly for a fixed image 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  max-width: 100%;
}

.c0 {
  max-width: unset;
}

<img
  alt="Bean"
  class="c0 c1"
  src="https://raw.githubusercontent.com/fannypackui/fannypack/master/src/_docs/bean.jpg"
  style="width: 500px;"
  width="500"
/>
`;
